deploymentfiles/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-namespace
  name: mc-app
  labels:
    app: mc-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mc-app
  template:
    metadata:
      labels:
        app: mc-app
    spec:
      containers:
      - name: mc-app
        image: sunny7893320220/ecomm
        ports:
        - containerPort: 80
