deploymentfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-namespace
  name: mc-app-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: mc-app
